# publii-mcp

./: .gitignore  .mcp.json  .tool-versions  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
docs/: api.md  development.md  examples.md  troubleshooting.md
src/publii_mcp/: __init__.py  cli.py  db.py  server.py
tests/: test_db.py
